tests/errors/circular_self_import.ki
var me = import("circular_self_import")
